k8s/apps/media/readarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
    spec:
      containers:
      - name: readarr
        image: lscr.io/linuxserver/readarr:latest
        ports:
        - name: http
          containerPort: 8989
          protocol: TCP
        volumeMounts:
        - name: books-volume
          mountPath: /books
        - name: downloads-volume
          mountPath: /downloads
        - name: config-volume
          mountPath: /config
      volumes:
      - name: books-volume
        persistentVolumeClaim:
          claimName: readarr-books
      - name: downloads-volume
        persistentVolumeClaim:
          claimName: transmission-books-data
      - name: config-volume
        persistentVolumeClaim:
          claimName: readarr-config
