k8s/apps/media/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
spec:
  selector:
    app: readarr
  ports:
  - name: http
    port: 8989
    protocol: TCP
    targetPort: 8989
  type: ClusterIP
