k8s/apps/media/readarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readarr-rajsingh-info-tls
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: rajsingh-info-global-issuer
    kubernetes.io/tls-acme: 'true'
    item.homer.rajsingh.info/Logo: https://readarr.rajsingh.info/Content/Images/logo.svg
    item.homer.rajsingh.info/Name: "Sonarr"
    item.homer.rajsingh.info/Type: Sonarr
    item.homer.rajsingh.info/Apikey: 98672a68a572443bbb3b3ae9d5222e3d
    item.homer.rajsingh.info/Target: _blank
spec:
  ingressClassName: haproxy
  rules:
  - host: readarr.rajsingh.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: readarr
            port:
              number: 8989
  tls:
  - secretName: readarr-rajsingh-info-tls
    hosts:
    - readarr.rajsingh.info
